--- a/lawyer-website-main/about.html
+++ b/lawyer-website-main/about.html
@@ -40,7 +40,7 @@
       />
 
       <p>Ethan Welch</p>
-      <span>_____ &nbsp; &nbsp;Chir Lawyer</span>
+      <span>_____ &nbsp; &nbsp;Chair Lawyer</span>
       </div>
       <div class="lawyer">
         <img src="images/im9.png"/>
