--- a/lawyer-website-main/index.html
+++ b/lawyer-website-main/index.html
@@ -26,7 +26,9 @@
 
    <head>
   <meta charset="UTF-8">
-  <title>ChatGPT Integration Demo</title>
+  <br><br><br><br>
+
+  <h1>ChatGPT Integration Demo</h1>
   <style>
     body {
       margin: 0;
