--- a/lawyer-website-main/index.html
+++ b/lawyer-website-main/index.html
@@ -112,7 +112,7 @@
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
-            'Authorization': '
+            'Authorization': ''
           },
           body: JSON.stringify({
             model: 'gpt-3.5-turbo',
