--- a/lawyer-website-main/index.html
+++ b/lawyer-website-main/index.html
@@ -17,7 +17,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
-      <button class="button">01654.066.456</button>
+      <button class="button">(+69) 420-SUE</button>
       </div>
     </div>
 
