--- a/lawyer-website-main/about.html
+++ b/lawyer-website-main/about.html
@@ -34,12 +34,9 @@
       <p class="headline">Meet Our Dedicated<br />Team Members.</p>
       <div id="lawyer">
       <div class="lawyer">
-      <img src="images/Matt.jpg"
-           width="300"
-     height="400"
-      />
+      <img src="images/Matt.jpg" width="30px" height="40px">
 
-      <p>Ethan Welch</p>
+      <p>Joe "Unsigma" Matthew</p>
       <span>_____ &nbsp; &nbsp;Chair Lawyer</span>
       </div>
       <div class="lawyer">
